--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Santosh's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://github.com/Santoshusa2016/my-resume/blob/17549b1a569eeff93e4d4f03b85df2a5bdd972ea/Santosh_Dotnet_2025.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/Santoshusa2016/my-resume/blob/17549b1a569eeff93e4d4f03b85df2a5bdd972ea/Santosh_Dotnet_2025.pdf" style="width:100%; height:100%;" frameborder="0" allow="autoplay"></iframe>
   </body>
 </html>
